hopefully this stops the issue
trying to make the hover effect not have the card clip out of the screen bounds

--- a/style.css
+++ b/style.css
@@ -247,8 +247,8 @@ h1 {
 
     card:hover {
 
-        scale: 103%;
-        rotate: -5deg;
+        scale: 102%;
+        rotate: -3deg;
     
     }
 
